--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentDefineInputChannelsPanel.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>qSlicerEMSegmentDefineInputChannelsPanel</class>
- <widget class="qSlicerEMSegmentWidget" name="qSlicerEMSegmentDefineInputChannelsPanel">
+ <widget class="qSlicerEMSegmentWorkflowWidgetStep" name="qSlicerEMSegmentDefineInputChannelsPanel">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -22,6 +22,12 @@
    </property>
    <item>
     <widget class="QGroupBox" name="DefineInputChannelsGroupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title">
       <string>Define Input Channels</string>
      </property>
@@ -58,6 +64,12 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>ctkWorkflowWidgetStep</class>
+   <extends>QWidget</extends>
+   <header>ctkWorkflowWidgetStep.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>qSlicerWidget</class>
    <extends>QWidget</extends>
    <header>qSlicerWidget.h</header>
@@ -72,6 +84,12 @@
    <class>qSlicerEMSegmentWidget</class>
    <extends>qSlicerWidget</extends>
    <header>qSlicerEMSegmentWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>qSlicerEMSegmentWorkflowWidgetStep</class>
+   <extends>ctkWorkflowWidgetStep</extends>
+   <header>qSlicerEMSegmentWorkflowWidgetStep.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
@@ -90,6 +108,22 @@
     <hint type="destinationlabel">
      <x>508</x>
      <y>44</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>qSlicerEMSegmentDefineInputChannelsPanel</sender>
+   <signal>mrmlSceneChanged(vtkMRMLScene*)</signal>
+   <receiver>EMSegmentInputChannelListWidget</receiver>
+   <slot>setMRMLScene(vtkMRMLScene*)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>211</x>
+     <y>148</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>215</x>
+     <y>126</y>
     </hint>
    </hints>
   </connection>
