ENH: EMSegment - AnatomicalTreeWidget display the label color near the structure name when not editable
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14949 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentSpecifyIntensityDistributionStep.ui
+++ b/QTModules/EMSegment/Resources/UI/qSlicerEMSegmentSpecifyIntensityDistributionStep.ui
@@ -36,11 +36,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="qSlicerEMSegmentAnatomicalTreeWidget" name="EMSegmentAnatomicalTreeWidget">
-        <property name="labelColumnVisible">
-         <bool>true</bool>
-        </property>
-       </widget>
+       <widget class="qSlicerEMSegmentAnatomicalTreeWidget" name="EMSegmentAnatomicalTreeWidget"/>
       </item>
      </layout>
     </widget>
