ENH: EMSegment: New icon.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14972 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/Resources/qSlicerEMSegmentModule.qrc
+++ b/QTModules/EMSegment/Resources/qSlicerEMSegmentModule.qrc
@@ -1,6 +1,6 @@
-<!DOCTYPE RCC><RCC version="1.0">
-  <qresource>
-    <file>Icons/EMSegment.png</file>
-    <file>Icons/Weight.png</file>
-  </qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>Icons/Weight.png</file>
+        <file>Icons/EMSegment.png</file>
+    </qresource>
 </RCC>
