--- a/Modules/EMSegment/Qt/Widgets/Resources/UI/qSlicerEMSegmentAnatomicalTreeWidget.ui
+++ b/Modules/EMSegment/Qt/Widgets/Resources/UI/qSlicerEMSegmentAnatomicalTreeWidget.ui
@@ -6,111 +6,95 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>420</width>
-    <height>200</height>
+    <width>280</width>
+    <height>291</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_2">
-   <property name="spacing">
-    <number>0</number>
-   </property>
-   <property name="margin">
-    <number>0</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QTreeView" name="TreeView">
-       <property name="rootIsDecorated">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QCheckBox" name="DisplayMRMLIDsCheckBox">
-         <property name="text">
-          <string>MRML ID's</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QCheckBox" name="DisplayAlphaCheckBox">
-         <property name="text">
-          <string>Alpha</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../qSlicerEMSegmentModule.qrc">
-           <normaloff>:/Icons/Weight.png</normaloff>:/Icons/Weight.png</iconset>
-         </property>
-         <property name="iconSize">
-          <size>
-           <width>18</width>
-           <height>18</height>
-          </size>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="ControlButtonsLayout">
-     <property name="spacing">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QToolButton" name="ExpandAllButton">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../../../../Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc">
-         <normaloff>:/Icons/TreeOpen.png</normaloff>:/Icons/TreeOpen.png</iconset>
-       </property>
-      </widget>
-     </item>
+    <layout class="QHBoxLayout" name="ControlButtonsLayout">
      <item>
       <widget class="QToolButton" name="CollapseAllButton">
        <property name="text">
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../../../Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc">
+        <iconset>
          <normaloff>:/Icons/TreeClose.png</normaloff>:/Icons/TreeClose.png</iconset>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer">
+      <widget class="QToolButton" name="ExpandAllButton">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>:/Icons/TreeOpen.png</normaloff>:/Icons/TreeOpen.png</iconset>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
        <property name="orientation">
-        <enum>Qt::Vertical</enum>
+        <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>20</width>
-         <height>40</height>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QTreeView" name="TreeView">
+     <property name="rootIsDecorated">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCheckBox" name="DisplayMRMLIDsCheckBox">
+       <property name="text">
+        <string>MRML ID's</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="DisplayAlphaCheckBox">
+       <property name="text">
+        <string>Alpha</string>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>:/Icons/Weight.png</normaloff>:/Icons/Weight.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>18</width>
+         <height>18</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
         </size>
        </property>
       </spacer>
