--- a/Modules/EMSegment/Qt/Resources/qSlicerEMSegmentModule.qrc
+++ b/Modules/EMSegment/Qt/Resources/qSlicerEMSegmentModule.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>Icons/Weight.png</file>
         <file>Icons/EMSegment.png</file>
+        <file>Icons/EMSegmentQuick.png</file>
     </qresource>
 </RCC>
